sashmaybe fix dark mode.. again

--- a/tnnt_templates/static/sash/css/dark-style.scss
+++ b/tnnt_templates/static/sash/css/dark-style.scss
@@ -6078,7 +6078,7 @@ body.dark-mode *:hover::-webkit-scrollbar-thumb {
         }
     }
     .bg-success-gradient {
-        background: linear-gradient(to bottom right, #1ea38f 0%, #5cf9e2 100%) !important;
+        background: linear-gradient(to bottom right, #1ea33b 0%, #5cf976 100%) !important;
     }
     a.bg-success-gradient {
         &:hover,
